flux/apps/utilities/harbor-endpoint/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
    name: external-harbor
    namespace: harbor
subsets:
    - addresses:
          - ip: 192.168.2.40
      ports:
          - name: http
            port: 8086
            protocol: TCP
