flux/apps/utilities/harbor-endpoint/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: external-harbor
    namespace: harbor
spec:
    ports:
        - name: http
          port: 8086
          protocol: TCP
          targetPort: 8086
