flux/apps/utilities/harbor-endpoint/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: external-harbor
    namespace: harbor
spec:
    parentRefs:
        - name: tls-gateway
          namespace: kube-system
    hostnames:
        - "harbor.axiom.lucasfehres.nl"
    rules:
        - backendRefs:
              - name: external-harbor
                port: 8086
